# aiku-23-2-haejwo

./: .gitignore  Multilingual_global_gradio.ipynb  README.md  client.py  clip_loss.py  config.py  inference.py  pyproject.toml  requirements.txt
stylegan2/op/: fused_act.py
txt2fix/: client.py  config.py  launch.py  model.py  styleclip.py  stylegan_encode.py  utils.py
txt2fix/encoder/: align_faces_parallel.py  hyperstyle.py
txt2fix/encoder/encoders/: e4e.py  model_irse.py  psp.py  psp_encoders.py  restyle_e4e_encoders.py  w_encoder.py
txt2fix/encoder/hypernetworks/: hypernetwork.py  refinement_blocks.py
txt2fix/global_direction/: global_direction.py  legacy.py  manipulate.py  multilingual_clip.py  networks.py  util.py
txt2fix/global_direction/dnnlib/tflib/: tfutil.py
txt2fix/global_direction/torch_utils/: misc.py  persistence.py
txt2fix/global_direction/torch_utils/ops/: bias_act.py
txt2fix/models/: .gitignore
txt2fix/stylegan2/op/: fused_act.py
txt2fix/txt2fix/: clip_loss.py
txt2fix/txt2fix/encoder/: debug.py  model_utils.py
txt2fix/txt2fix/encoder/encoders/: psp.py
txt2fix/txt2fix/stylegan2/: model.py
