[tool.poetry]
name = "txt2fix"
version = "0.1.0"
description = ""
authors = ["Kyumin Kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.1.3"
regex = "^2023.10.3"
tqdm = "^4.66.1"
gradio = "^4.5.0"
ipykernel = "^6.27.0"
torchvision = "^0.16.1"

[tool.poetry.scripts]
client = "txt2fix/launch.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
