[tool.poetry]
name = "txt2fix"
version = "0.1.0"
description = ""
authors = ["Kyumin Kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.1.3"
regex = "^2023.10.3"
tqdm = "^4.66.1"
gradio = "^4.5.0"
ipykernel = "^6.27.0"
dlib = "^19.24.2"
scipy = "^1.11.4"
transformers = "^4.36.2"
torchvision = "^0.16.2"

[tool.poetry.scripts]
client = "txt2fix.launch:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
